# ikt-tkinter-projekt

./: .gitignore  README.md  foablak.py  package-lock.json  package.json  setup.cfg  síkidomok_kerület_térfogat.txt
src/: Window.py  deltoid_ablak.py  foablak.py  haromszog_ablak.py  kor_ablak.py  main.py  mode.py  negyzet_ablak.py  paralelogramma_ablak.py  rombusz_ablak.py  teglalap_ablak.py  teszt_ablak.py  trapez_ablak.py
src/IKT_Tkinter_projekt.egg-info/: PKG-INFO  SOURCES.txt
src/window/: Window.py  window_handler.py
src/window/impl/: Test.py
