[metadata]
name = IKT-Tkinter-projekt
version = 0.0.1
description = Kerület és terület számító program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WR0NGTH3HU4/ikt-tkinter-projekt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
